--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <img class="avatar" src="https://i.pinimg.com/474x/d8/c8/3f/d8c83f2d04c3cae2455681aab9c653de.jpg">
             <div class="text">
                 <h3>Daron Malakian</h3>
-                <p>System of a Down Guitarrist</p>
+                <p>System of a Down Guitarist</p>
                 <h4>Los Angeles, California</h4>
             </div>
         </div>
